all pictures in place

--- a/code/index.html
+++ b/code/index.html
@@ -16,21 +16,17 @@
     <img class="logo-picture" src="assets/baby.png" alt="parent">
 
     <ul>
-      <a class="header-link 1"
-        href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics#so_what_is_html">
-        HTML
+      <a class="header-link link-1" href="https://www.google.se/">
+        HOME
       </a>
-      <a class="header-link 2"
-        href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics#what_is_css">
-        CSS
+      <a class="header-link link-2" href="https://www.google.se/">
+        CULTURE
       </a>
-      <a class="header-link 3"
-        href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">
-        JavaScript
+      <a class="header-link link-3" href="https://www.google.se/">
+        LIFESTYLE
       </a>
-      <a class="header-link 4"
-        href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">
-        Home
+      <a class="header-link link-4" href="https://www.google.se/">
+        SIGN UP!
       </a>
     </ul>
   </header>
@@ -38,73 +34,73 @@
   <section class="big-news picture">
     <!-- The big news content -->
 
-    <img src="assets/flicka.jpg" alt="Flicka">
+    <img src="assets/babyroom.png" alt="Babyroom">
 
   </section>
 
 
   <section class="big-news content">
-    <h1>Big baby news</h1>
+    <h1>Baby news</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt laudantium facilis assumenda
       mollitiacupiditate nesciunt, iste dolore commodi. Alias voluptate architecto ipsum eum omnis odit quidem esse
       voluptatibus velit ipsa.</p>
-    <button>click</button>
+    <button>View full article</button>
 
   </section>
 
   <section class="small-news 1">
     <!-- The other news  -->
 
-    <img src="assets/baby.png" alt="Baby">
+    <img src="assets/play.webp" alt="Baby play">
     <h3>News</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
   </section>
 
   <section class="small-news 2">
-    <img src="assets/baby.png" alt="Baby">
+    <img src="assets/sleeping.webp" alt="Baby sleeping">
     <h3>News</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
   </section>
 
   <section class="small-news 3">
-    <img src="assets/baby.png" alt="Baby">
+    <img src="assets/stroller.webp" alt="Baby stroller">
     <h3>News</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
   </section>
 
   <section class="small-news 4">
-    <img src="assets/baby.png" alt="Baby">
+    <img src="assets/eating.webp" alt="Baby eating">
     <h3>News</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
   </section>
 
   <section class="small-news 5">
-    <img src="assets/baby.png" alt="Baby">
+    <img src="assets/babyfood.webp" alt="Baby food">
     <h3>News</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
   </section>
 
   <section class="small-news 6">
-    <img src="assets/baby.png" alt="Baby">
+    <img src="assets/icecream.webp" alt="Baby eating icecream">
     <h3>News</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
   </section>
 
   <section class="small-news 7">
-    <img src="assets/baby.png" alt="Baby">
+    <img src="assets/toys.webp" alt="Toys">
     <h3>News</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
   </section>
 
   <section class="small-news 8">
-    <img src="assets/baby.png" alt="Baby">
+    <img src="assets/nature.webp" alt="Baby in nature">
     <h3>News</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
