changed background color, added logo icon

--- a/code/index.html
+++ b/code/index.html
@@ -10,8 +10,26 @@
 </head>
 
 <body>
+
   <header>
     <!-- Some kind of logo and navbar -->
+    <img src="assets/cakelogo.png"
+      alt="cake logo"><!--Cake icons created by Nur syifa fauziah - Flaticon,https://www.flaticon.com-->
+    <h2>Baking News</h2>
+
+    <nav id="navbar">
+      <div class="menu">
+        <ul class="nav-links">
+          <li><a href="https://www.barry-callebaut.com/en/manufacturers/trends-insights/top-6-trends-watch-bakery"
+              target="_blank">Trends</a>
+          </li>
+          <li><a href="https://www.allrecipes.com/recipes/276/desserts/cakes/" target="_blank">Recepies</a></li>
+          <li><a href="https://www.baking-forums.com/forums/cakes.6/" target="_blank">Forum</a></li>
+          <li><a href="https://www.tantfondant.se/" target="_blank">Shop</a></li>
+        </ul>
+      </div>
+    </nav>
+
   </header>
 
   <section class="big-news">
