styled header img, added images, styled p and more

--- a/code/index.html
+++ b/code/index.html
@@ -12,32 +12,100 @@
 <body>
 
   <header>
-    <!-- Some kind of logo and navbar -->
-    <img src="assets/cakelogo.png"
-      alt="cake logo"><!--Cake icons created by Nur syifa fauziah - Flaticon,https://www.flaticon.com-->
-    <h2>Baking News</h2>
-
-    <nav id="navbar">
-      <div class="menu">
-        <ul class="nav-links">
-          <li><a href="https://www.barry-callebaut.com/en/manufacturers/trends-insights/top-6-trends-watch-bakery"
-              target="_blank">Trends</a>
-          </li>
-          <li><a href="https://www.allrecipes.com/recipes/276/desserts/cakes/" target="_blank">Recepies</a></li>
-          <li><a href="https://www.baking-forums.com/forums/cakes.6/" target="_blank">Forum</a></li>
-          <li><a href="https://www.tantfondant.se/" target="_blank">Shop</a></li>
-        </ul>
-      </div>
+    <!-- Logotype -->
+    <div>
+      <img src="assets/cakelogo.png"
+        alt="cake logo"><!--Cake icons created by Nur syifa fauziah - Flaticon,https://www.flaticon.com-->
+      <h2>Baking News</h2>
+    </div>
+    <!-- Navigation bar -->
+    <nav>
+      <ul class="nav-links">
+        <li><a href="https://www.barry-callebaut.com/en/manufacturers/trends-insights/top-6-trends-watch-bakery"
+            target="_blank">Trends</a>
+        </li>
+        <li><a href="https://www.allrecipes.com/recipes/276/desserts/cakes/" target="_blank">Recepies</a></li>
+        <li><a href="https://www.baking-forums.com/forums/cakes.6/" target="_blank">Forum</a></li>
+        <li><a href="https://www.tantfondant.se/" target="_blank">Shop</a></li>
+      </ul>
     </nav>
-
   </header>
 
+  <!-- The big news content -->
   <section class="big-news">
-    <!-- The big news content -->
+    <img src="assets/Princesscake.JPG" alt="Princess cake">
+    <h1>The Swedish"Princess cake"</h1>
+    <p>The so called Princess cake is becoming popular outside of Sweden. The cake is a
+      traditional Swedish
+      layer cake
+      or torte consisting of alternating layers of airy sponge cake, pastry cream, and a thick-domed layer of
+      whipped
+      cream. The cake is covered by a layer of rolled marzipan, giving it a smooth, rounded top. The marzipan
+      overlay is
+      usually green, sprinkled with powdered sugar, and often decorated with a pink marzipan rose. While the
+      original
+      recipe did not contain any fruit, modern versions usually include layers of jam or fresh fruit, usually
+      raspberries.</p>
+    <a href="https://www.tastingtable.com/1371175/classic-swedish-princess-cake-prinsesstarta-recipe/"><button>Read
+        more</button></a>
   </section>
 
-  <section class="">
-    <!-- The other news  -->
+  <!-- The other news  -->
+  <section class="article">
+    <article>
+      <img src="assets/rose.jpg" alt="rose">
+      <h1>How to create a marsipan rose</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
+        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
+        posuere.<button>Read
+          more</button></a>
+      </p>
+    </article>
+    <article>
+      <img src="assets/rose.jpg" alt="rose">
+      <h1>How to create a marsipan rose</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
+        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
+        posuere.<button>Read
+          more</button></a>
+      </p>
+    </article>
+    <article>
+      <img src="assets/rose.jpg" alt="rose">
+      <h1>How to create a marsipan rose</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
+        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
+        posuere.<button>Read
+          more</button></a>
+      </p>
+    </article>
+    <article>
+      <img src="assets/rose.jpg" alt="rose">
+      <h1>How to create a marsipan rose</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
+        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
+        posuere.<button>Read
+          more</button></a>
+      </p>
+    </article>
+    <article>
+      <img src="assets/rose.jpg" alt="rose">
+      <h1>How to create a marsipan rose</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
+        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
+        posuere.<button>Read
+          more</button></a>
+      </p>
+    </article>
+    <article>
+      <img src="assets/rose.jpg" alt="rose">
+      <h1>How to create a marsipan rose</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
+        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
+        posuere.<button>Read
+          more</button></a>
+      </p>
+    </article>
   </section>
 </body>
 
