started from scrath again and made everything responsive.

--- a/index.html
+++ b/index.html
@@ -6,63 +6,70 @@
   <!-- Change the title below -->
   <title>News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
   </header>
-
-  <section class="card-news big">
-    <!-- The big news content -->
-    <img class="card-news-img big" src="img/newyork.png" alt="lägg till senare">
-    <div class="card-text big">
-      <h2>Rubrik</h2>
-      <p> är kommer det vara massor av text och sådant nyttigt. Här kommer det vara massor av text och
-        sådant nyttigtHär
-        kommer det vara massor av text och sådant nyttigtHär kommer det vara massor av text och sådant nyttigt</p>
-      <a href="http://www.google.se" class="card-button big">Read more</a>
-  </section>
-
-
-  <section class="card-news">
-
-    <img class="card-news-img" src="img/girl-on-feild-660x660.png" alt="lägg till senare">
-    <div class="card-text">
-      <h3>Rubrik</h3>
-      <p>Här kommer det vara massor av text och sådant nyttigt. Här kommer det vara massor av text och
-        sådant nyttigt Här kommer det vara massor av text och sådant nyttigtHär kommer det vara massor av text och
-        sådant nyttigt</p>
-      <a href="http://www.google.se" class="card-button">Read more</a>
+  <main>
+    <div class="card big-card">
+      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
+      <div class="text-content-big">
+        <h3>Rubrik</h3>
+        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
+        <ul>
+          <li>Read more</li>
+        </ul>
+      </div>
     </div>
 
-    <img class="card-news-img" src="img/girl-on-feild-660x660.png" alt="lägg till senare">
-    <div class="card-text">
-      <h3>Rubrik</h3>
-      <p>Här kommer det vara massor av text och sådant nyttigt. Här kommer det vara massor av text och sådant nyttigt
-        Här kommer det vara massor av text och sådant nyttigtHär kommer det vara massor av text och sådant nyttigt</p>
-      <a href="http://www.google.se" class="card-button">Read more</a>
+    <div class="card">
+      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
+      <div class="text-content">
+        <h3>Rubrik</h3>
+        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
+        <ul>
+          <li>Read more</li>
+        </ul>
+      </div>
     </div>
 
-    <img class="card-news-img" src="img/girl-on-feild-660x660.png" alt="lägg till senare">
-    <div class="card-text">
-      <h3>Rubrik</h3>
-      <p>Här kommer det vara massor av text och sådant nyttigt. Här kommer det vara massor av text och sådant nyttigt
-        Här kommer det vara massor av text och sådant nyttigt.Här kommer det vara massor av text och sådant nyttigt</p>
-      <a href="http://www.google.se" class="card-button">Read more</a>
+    <div class="card">
+      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
+      <div class="text-content">
+        <h3>Rubrik</h3>
+        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
+        <ul>
+          <li>Read more</li>
+        </ul>
+      </div>
     </div>
 
-    <img class="card-news-img" src="img/girl-on-feild-660x660.png" alt="lägg till senare">
-    <div class="card-text">
-      <h3>Rubrik</h3>
-      <p>Här kommer det vara massor av text och sådant nyttigt. Här kommer det vara massor av text och sådant nyttigt
-        Här kommer det vara massor av text och sådant nyttigtHär kommer det vara massor av text och sådant nyttigt</p>
-      <a href="http://www.google.se" class="card-button">Read more</a>
+    <div class="card">
+      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
+      <div class="text-content">
+        <h3>Rubrik</h3>
+        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
+        <ul>
+          <li>Read more</li>
+        </ul>
+      </div>
     </div>
-  </section>
 
-  </section>
+    <div class="card">
+      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
+      <div class="text-content">
+        <h3>Rubrik</h3>
+        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
+        <ul>
+          <li>Read more</li>
+        </ul>
+      </div>
+    </div>
+
+  </main>
 </body>
 
 </html>
