added favicon and footer

--- a/code/index.html
+++ b/code/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <!-- Change the title below -->
-  <title>Baking News</title>
+  <title>Bake News</title>
   <link rel="stylesheet" href="./style.css" />
+  <!--favicon image-->
+  <link rel="icon" type="image.png" href="assets/cakelogo_favicon.png" />
   <!-- don't forget the meta tag for responsiveness -->
 </head>
 
@@ -16,7 +18,7 @@
     <div>
       <img src="assets/cakelogo.png"
         alt="cake logo"><!--Cake icons created by Nur syifa fauziah - Flaticon,https://www.flaticon.com-->
-      <h2>Baking News</h2>
+      <h2>Bake News</h2>
     </div>
     <!-- Navigation bar -->
     <nav>
@@ -108,5 +110,8 @@
     </article>
   </section>
 </body>
+<footer>
+  <p>&copy; 2024 Bake News</p>
+</footer>
 
 </html>
