CSS styling of navigation menu

--- a/code/index.html
+++ b/code/index.html
@@ -38,16 +38,11 @@
     <img src="assets/Princesscake.JPG" alt="Princess cake">
     <h1>The Swedish"Princess cake"</h1>
     <p>The so called Princess cake is becoming popular outside of Sweden. The cake is a
-      traditional Swedish
-      layer cake
-      or torte consisting of alternating layers of airy sponge cake, pastry cream, and a thick-domed layer of
-      whipped
-      cream. The cake is covered by a layer of rolled marzipan, giving it a smooth, rounded top. The marzipan
-      overlay is
-      usually green, sprinkled with powdered sugar, and often decorated with a pink marzipan rose. While the
-      original
-      recipe did not contain any fruit, modern versions usually include layers of jam or fresh fruit, usually
-      raspberries.</p>
+      traditional Swedish layer cake or torte consisting of alternating layers of airy sponge cake,
+      pastry cream, and a thick-domed layer of whipped cream. The cake is covered by a layer of rolled marzipan,
+      giving it a smooth, rounded top. The marzipan overlay is usually green, sprinkled with powdered sugar, and
+      often decorated with a pink marzipan rose. While the original recipe did not contain any fruit, modern versions
+      usually include layers of jam or fresh fruit, usually raspberries.</p>
     <a href="https://www.tastingtable.com/1371175/classic-swedish-princess-cake-prinsesstarta-recipe/"><button>Read
         more</button></a>
   </section>
