--- a/code/index.html
+++ b/code/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/code/assets/favicon.svg" />
-    <link rel=”mask-icon” href=”/code/assets/favicon.svg” color=”#000000">
+    <link rel="icon" href="./assets/favicon.svg" />
+    <link rel=”mask-icon” href=”./assets/favicon.svg” color=”#000000">
   </head>
   <body>
     <div class="grid-wrapper grid-wrapper--main">
@@ -20,7 +20,7 @@
         <img
           class="top-header__logo"
           alt="The Featherington"
-          src="/code/assets/featherington-logo.svg"
+          src="./assets/featherington-logo.svg"
         />
         <nav class="top-header__nav">
           <ul>
@@ -61,7 +61,7 @@
         <div class="hero__image">
           <img
             class="object-fit-cover"
-            src="/code/assets/hummingbird-green-ecuador.jpg"
+            src="./assets/hummingbird-green-ecuador.jpg"
             alt="Green hummingbird from Ecuador"
           />
         </div>
@@ -74,7 +74,7 @@
             <div class="card-item__image">
               <img
                 class="border-radius-lg"
-                src="/code/assets/puffins.jpg"
+                src="./assets/puffins.jpg"
                 alt="Two puffins on green grass"
               />
             </div>
@@ -101,7 +101,7 @@
             <div class="card-item__image">
               <img
                 class="border-radius-lg"
-                src="/code/assets/eagle.jpg"
+                src="./assets/eagle.jpg"
                 alt="The head of an eagle"
               />
             </div>
@@ -131,7 +131,7 @@
             <div class="card-item__image">
               <img
                 class="object-fit-cover"
-                src="/code/assets/flamingo.jpg"
+                src="./assets/flamingo.jpg"
                 alt="Songbird sitting on a branch"
               />
             </div>
@@ -158,7 +158,7 @@
             <div class="card-item__image">
               <img
                 class="border-radius-lg"
-                src="/code/assets/penguin.jpg"
+                src="./assets/penguin.jpg"
                 alt="Two penguins facing each other"
               />
             </div>
@@ -188,7 +188,7 @@
             <div class="card-item__image">
               <img
                 class="border-radius-lg"
-                src="/code/assets/warbler.jpg"
+                src="./assets/warbler.jpg"
                 alt="Warbler sitting on a branch"
               />
             </div>
@@ -218,7 +218,7 @@
             <div class="card-item__image">
               <img
                 class="border-radius-lg"
-                src="/code/assets/owl.jpg"
+                src="./assets/owl.jpg"
                 alt="The head of an owl"
               />
             </div>
@@ -245,7 +245,7 @@
             <div class="card-item__image">
               <img
                 class="border-radius-lg"
-                src="/code/assets/songbird.jpg"
+                src="./assets/songbird.jpg"
                 alt="Songbird sitting on a branch"
               />
             </div>
@@ -280,7 +280,7 @@
             <img
               class="footer__logo"
               alt="The Featherington"
-              src="/code/assets/featherington-logo-inverted.svg"
+              src="./assets/featherington-logo-inverted.svg"
             />
             <p>Discover. Admire. Conserve.</p>
           </div>
